# sarun

./: .gitignore  AUDIT.md  CLAUDE.md  Makefile  README.md  oaita  oaita_design.md  oaita_fakeclient  oaita_fakeserver  oaita_guide.system  rust-toolchain.toml  sakar  sarun  test_attach_remote.py  test_box_dns.py  test_brush_link_rs.py  test_brush_nested_sh_rs.py  test_brush_rs.py  test_changes_view_incremental.py  test_chmod_readonly.py  test_cli_rs.py  test_concurrent_rw_rs.py  test_control_plane.py  test_docs_coverage.py  test_e2e.py  test_engine_rs.py  test_flow_view.py  test_fsx.py  test_make_rs.py  test_modes_rs.py  test_mtime_fidelity.py  test_musl_rs.py  test_n2_rs.py  test_nested_apply_rs.py  test_net_flow.py  test_new_coverage.py  test_oaita.py  test_oaita_e2e.py  test_oaita_fakeapi.py  test_oaita_scenarios.py  (+27 more)
engine/: BRUSH-RELATION-MIGRATION.md  Cargo.toml  DESIGN-cellulose.md  DESIGN-direct-filesystem.md  DESIGN-execution-backends.md  DESIGN-sud.md  DESIGN-web.md  DESIGN.md  EDITOR-RELATION-MIGRATION.md  PROLOG-HUB-ROADMAP.md  UI-SOCK-BINARY.md  build.rs  test_builtin_contract.py  vendor.toml
engine/.cargo/: config.toml
engine/appliance/: compat32-arm.S  compat32-x86.S  kernel-aarch64.config  kernel-common.config  kernel-x86_64.config  manifest.toml  qemu-aarch64.mak  qemu-arm.mak  qemu-mipsel.mak  qemu-sarun.patch  qemu-x86_64.mak
engine/pl/: action_catalog.pl  action_grammar.pl  ast_state_relation.pl  brush_grammar.pl  context_relation.pl  evidence_projection.pl  grammar_codec.pl  grammar_engine.pl  grammar_ir.pl  grammar_store.pl  local_state_relation.pl  relation_api.pl  test_action_grammar.pl  test_ast_state_relation.pl  test_brush_grammar.pl  test_context_relation.pl  test_grammar_engine.pl  test_grammar_ir.pl  test_local_state_relation.pl  test_relation_api.pl  test_transport_catalog.pl  text_grammar_engine.pl  transport_catalog.pl  wire_codegen.pl
engine/scripts/: cargo-zigcc-x86_64-linux-musl
engine/src/: action_bridge.rs  action_help.rs  appliance.rs  attach.rs  brush.rs  brush_gates.rs  brush_probe_relation.rs  brush_relation.rs  builtin_exec.rs  capture.rs  command_syntax.rs  containers_conf.rs  control.rs  debug_resources.rs  debug_session.rs  depot.rs  direct_fs.rs  discover.rs  dockerfile.rs  editor.rs  exec_wrappers.rs  find_builtin.rs  frames.rs  fuse_broker.rs  fuse_transport.rs  generated_wire.rs  hostfs.rs  image_provenance.rs  jobserver.rs  katirun.rs  main.rs  mirrors.rs  n2run.rs  oci.rs  oci_verify.rs  overlay.rs  parser.rs  paths.rs  prolog.rs  pty.rs  (+21 more)
engine/src/browser/: cdp.rs  font.rs  launch.rs  mod.rs  render.rs  session.rs
engine/src/net/: bridge.rs  ca.rs  dhcp.rs  dispatch.rs  dns.rs  filter.rs  flows.rs  l4.rs  mitm.rs  mod.rs  policy.rs  prompt.rs  stack.rs  subnet.rs  tap.rs  tcp.rs  udp.rs  webcap.rs
engine/src/oaita/: budget.rs  cli.rs  client.rs  config.rs  driver.rs  exec.rs  hints.rs  ids.rs  inspect.rs  local.rs  mod.rs  models.rs  pretty.rs  proxy.rs  proxy_mux.rs  replay.rs  structural.rs  tools.rs  trace.rs  turns.rs
engine/src/rules/: glob.rs
engine/src/sarunfs/: backing.rs  layers.rs  mutation.rs  synthetic.rs
engine/testdata/: brush_relation_reference.json
engine/tests/: brush_relation_completion_pty.rs  editor_builtin_pty.rs
engine/vendor-patches/: PORTING-STORY.md  README.md
engine/vendor-patches/brush-builtins/: 0010-brush-de-workspace-vendored-crate-manifests-for-standalone-p.patch  0020-vendor-brush-builtins-exec-in-a-subshell-must-terminate-the-.patch  0030-provenance-record-make-shell-variable-assignments-in-the-box.patch  0040-provenance-opt-in-vars-record-rhs-dereferences-and-execution.patch  0050-wait--implement-waiting-on-process-IDs.patch  0060-discover-optimized-external-commands-through-PATH.patch  0070-store-umask-in-logical-shell-state.patch  0080-Expose-test-execution-parser-through-builtin-relation.patch  files  series
engine/vendor-patches/brush-core/: 0010-brush-de-workspace-vendored-crate-manifests-for-standalone-p.patch  0020-brush-core-pipeline-stage-fd-hygiene-spawned_pipeline_stage-.patch  0030-brush-core-launch-state-hooks-for-nice-setsid-nohup-exec-wra.patch  0040-brush-core-add-Shell-run_argv-run-env-nice-.-through-it-drop.patch  0050-Fix-audit-bugs-H5-L1-H1-correct-stale-capture-rename-comment.patch  0060-brush-snoop-self-shadowed-bin-sh-scripts-in-process-no-fork-.patch  0070-provenance-record-make-shell-variable-assignments-in-the-box.patch  0080-provenance-opt-in-vars-record-rhs-dereferences-and-execution.patch  0090-brush-bash-conformance-corpus-38-probes-through-a-real-box-3.patch  0100-brush-LINENO-tracks-execution-unblocks-autoconf-configure.patch  0110-brush-reset-EXIT-trap-in-subshells-bash-semantics-record-sou.patch  0120-brush-core-clear-ALL-inherited-traps-on-the-snoop-clone.patch  0130-pipeline--compound-and-function-stages-run-concurrently.patch  0140-jobs--mint-stand-in-pids-for-in-process-background-jobs.patch  0150-brush-core--compound-pipeline-stages-run-on-real-threads.patch  0160-brush-core--background-jobs--coproc--substitutions-on-real-t.patch  0170-brush-core---dev-fd-N-from-process-substitution-is-a-REAL-fd.patch  0180-brush-core---dev-fd-N-opens-prefer-the-REAL-fd-over-the-virt.patch  0200-brush-core-expose-builtin-command-definitions.patch  (+16 more)
engine/wasm/: PORTING-WASM.md
gimir/: .gitignore  ATTACH-CONVERGENCE.md  Cargo.toml  DEPOT-BRIEF.md  DEPOT-DESIGN.md  MIRRORS.md  PLUGINS.md  README.md  SCOPING.md
gimir/depot/: Cargo.toml
gimir/depot-cache/: Cargo.toml
gimir/depot-stream/: Cargo.toml
gimir/depot-vbf/: Cargo.toml
gimir/docs/: tiered-vbf-and-strpool.md  wikipedia-browsing-plan.md  wikipedia-import-plan.md
gimir/gitdepot/: ASSEMBLY.md  Cargo.toml  DEFECTS.md  DESIGN-RECOVERED.md  DESIGN.md  EVALUATION.md  IMPL-NOTES.md  VALIDATION.md  WORKMAP.md
gimir/ietf-mirror/: Cargo.toml
gimir/notes/: 02-data-layout.md  05-data-design.md  attach-implementation-plan.md  bench-v2-moderate.md  branch-lane-buildspec.md  branch-lane-model.md  gimir-design.md  gimir-intent-history.md
gimir/strpool/: Cargo.toml
gimir/wikimak/: PHASES.md
(+822 files in other folders)
