[package]
name = "sarun-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sarun"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bytes = "1.10"
brush-core = "0.5"
brush-builtins = "0.2"
# clap derive for the in-process exec-wrapper builtins (env/printenv …); the
# `builtins::Command` trait is `clap::Parser`-based. Pinned to the same 4.6.0
# brush-builtins uses so the derived `Parser` impl satisfies brush-core's bound.
clap = { version = "4.6.0", features = ["derive"] }
brush-coreutils-builtins = { version = "0.1", features = ["coreutils.all"] }
# Direct dep on uutils' `uu_cat` so the engine can call its injected logical
# entry point (`uu_cat::cat`) for the native in-process `cat` builtin. The
# `[patch.crates-io]` below redirects this to our vendored fork (vendor/uu_cat),
# the same copy brush-coreutils-builtins already pulls in transitively.
uu_cat = "0.8"
# More uutils crates ported the same way (vendored fork + injected-I/O logical
# entry) so they run as NATIVE in-process brush builtins — pipeline-safe, no
# dup2. Each is redirected to its vendored fork by `[patch.crates-io]` below.
uu_head = "0.8"
uu_wc = "0.8"
uu_nl = "0.8"
uu_tac = "0.8"
# Wave 2 (same injected-I/O treatment): arg→stdout tinies + filters.
uu_basename = "0.8"
uu_dirname = "0.8"
uu_seq = "0.8"
uu_expr = "0.8"
uu_tr = "0.8"
uu_cut = "0.8"
uu_uniq = "0.8"
uu_sort = "0.8"
# Same injected-I/O treatment, plus a logical-cwd rewrite: `cp` resolves its
# relative path operands against the shell's logical cwd (the process is never
# chdir'd). Logical entry `uu_cp::cp(args, cwd, out, err)`.
uu_cp = "0.8"
# Vendored, find-only fork of uutils/findutils 0.9.1: run `find` as an
# in-process brush builtin against the shell's logical I/O. See vendor/findutils.
findutils = { path = "vendor/findutils" }
brush-parser = { version = "0.4", features = ["serde"] }
# Reedline-based interactive REPL for the brush-sh shim's -i mode:
# multi-line editing, history, completion, syntax highlight — built on
# the same brush-core we already run, so semantics match script mode.
brush-interactive = { version = "0.4", default-features = false, features = ["reedline"] }
# Line editing + history for the `oci author` REPL at a tty (the same reedline
# brush-interactive already pulls in). Piped/non-tty input still uses plain
# stdin; this is the interactive front-end only.
reedline = "0.47"
crossterm = "0.29"
# Vendored lib-only patched fork of n2 (github.com/evmar/n2) — see vendor/n2.
n2 = { path = "vendor/n2", default-features = false }
# Vendored lib-only patched fork of kati (github.com/google/kati) — see
# vendor/kati. Parses Makefiles → ninja graph for the embedded `make` path.
kati = { path = "vendor/kati" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "fs", "process", "sync"] }
tokio-stream = "0.1"
futures-util = "0.3"
regex = "1"
rustls-pemfile = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
fuser = "0.17.0"
glob = "0.3.3"
libc = "0.2.186"
parking_lot = "0.12"
portable-pty = "0.9"
ratatui = "0.30.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0.150"
similar = "3.1.1"
# wezterm-term's terminal-emulator core (real VT/xterm state machine,
# Sixel/iTerm/Kitty image cells, OSC/DCS coverage). NOT published by
# wezterm itself; the `tattoy-` fork republishes the whole dep chain
# to crates.io specifically for embedding use cases like ours, so we
# can depend on it without vendoring.
tattoy-wezterm-term = "0.1.0-fork.5"
tattoy-termwiz = "0.24.0-fork.2"
# ── Networking (-n boxes): TAP + userland TCP/IP + DHCP + DNS + MITM proxy ─
# Per-box netns with one TAP fd; smoltcp accepts in userland and the engine
# originates the upstream connections from its own (host) namespace. See
# engine/src/net/ for the wiring. dhcproto and domain encode/decode the
# protocol wire formats so this codebase stays in the policy / glue layer.
smoltcp = { version = "0.12", default-features = false, features = [
    "std", "log", "medium-ethernet",
    "socket-tcp", "socket-udp", "socket-raw", "socket-dhcpv4",
    "proto-ipv4", "proto-dhcpv4",
] }
dhcproto = "0.13"
domain = { version = "0.10", features = ["std", "net"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
pcap-file = "2"
nix = { version = "0.30", features = ["sched", "net", "socket", "ioctl", "user", "fs", "process"] }
rand = "0.8"
time = "0.3"
tui-term = { version = "0.3", features = ["vt100"] }
# OCI image import — `sarun oci load` reads a manifest's layers and creates
# a chain of at-rest sarun boxes (one per layer). Public-registry pulls and
# local oci-archive/oci-layout inputs only — no signing, no push.
#   oci-client  registry pull (renamed from oci-distribution; oras-project)
#   oci-spec    typed ImageConfiguration (env/cmd/workdir/user) + layout files
#   tar         per-layer entry iteration (PAX/GNU long-name aware)
#   flate2      gzip layers (tar+gzip media type, the common case)
#   ruzstd      zstd layers (tar+zstd media type) — pure-Rust, no C dep so
#               the static-musl build stays a single binary
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
oci-spec = "0.10"
# `ADD <url>` in `oci build` fetches over HTTPS. reqwest is already in the tree
# (oci-client depends on it). We add no TLS feature ourselves: cargo feature
# unification gives this edge the SAME rustls backend oci-client already enables
# (which builds on static-musl today), so we don't risk pulling a second/C-based
# crypto provider. `http2` is additive and harmless.
reqwest = { version = "0.13", default-features = false, features = ["http2"] }
tar = "0.4"
flate2 = "1"
ruzstd = "0.7"
# ADD-of-local-tar auto-extract for the xz / bzip2 cases. Both are pure-Rust
# (no liblzma / libbz2 C dep), so the static-musl single-binary build is
# unaffected. Decode-only, which is all ADD needs.
lzma-rs = "0.3"
bzip2-rs = "0.1"
# Content-addressable blob integrity for oci-archive/oci-layout loads (verify a
# blob's bytes hash to the digest its descriptor claims). Already in the tree
# transitively via oci-client; named directly so the verification is explicit.
sha2 = "0.10"
# Key-based cosign signature verification (configured public key). Pure-Rust
# RustCrypto ECDSA P-256 + PEM SPKI key parsing — no OpenSSL/C, static-musl safe.
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
# Structural editing — tree-sitter + a starter pack of grammars. Drives the
# inspect/write "symbol" locators (path symbol <name>[N]): inspect lists or
# focuses named definitions; write splices new content into the symbol's
# byte range. Grammars are C-only, no extra system deps — cc-rs picks up
# the zigshim like onig_sys does.
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-bash = "0.25"

# sarun: redirect crates.io brush-core 0.5.0 to our vendored copy, which
# pins commit 428f477 (PR #1181) — the fd-leak fix for shell pipelines.
# `brush-core 0.5.0` on crates.io clones `OpenFile` via dup, multiplying
# fd table entries; some of those dups land on numbered fds that survive
# fork+exec despite O_CLOEXEC (notably anything that goes through
# `From<OpenFile> for Stdio`). The visible symptom: long pipelines (e.g.
# autoconf-generated `./configure`) hang because child processes hold the
# write end of their own stdin pipe, so the kernel never delivers EOF.
# PR #1181 reworks OpenFile to wrap File/PipeReader/PipeWriter in Arc, so
# clone is a refcount bump and no dup happens — the fix.
#
# This `[patch.crates-io]` ensures EVERY brush crate (brush-builtins,
# brush-coreutils-builtins, brush-parser, etc.) that names brush-core
# resolves to OUR copy rather than two co-existing brush-core versions
# in the dep graph (which produces "expected (String, Registration<SE>),
# found (String, Registration<_>)" type-mismatch noise across builtin
# registration). Once brush-core 0.6 ships to crates.io, drop this.
[patch.crates-io]
brush-core               = { path = "vendor/brush-core" }
brush-builtins           = { path = "vendor/brush-builtins" }
brush-coreutils-builtins = { path = "vendor/brush-coreutils-builtins" }
brush-parser             = { path = "vendor/brush-parser" }
brush-interactive        = { path = "vendor/brush-interactive" }
# Vendored, patched fork of uutils' `uu_cat`: adds a logical, injected-I/O
# entry point (`cat::cat`) that writes the shell's OpenFile sink/source with no
# process-global stdio, so it can run as an in-process brush builtin while
# keeping the Linux splice(2) fast path. The retained `uumain` is a thin bridge
# for the standalone binary / subprocess dispatcher. See vendor/uu_cat/src/cat.rs.
uu_cat                   = { path = "vendor/uu_cat" }
# Same injected-I/O treatment as uu_cat: a logical entry that writes the shell's
# OpenFile sink/source with no process-global stdio, consumed by the native
# Head/Wc/Nl/Tac builtins in src/brush.rs (gated in src/brush_gates.rs).
uu_head                  = { path = "vendor/uu_head" }
uu_wc                    = { path = "vendor/uu_wc" }
uu_nl                    = { path = "vendor/uu_nl" }
uu_tac                   = { path = "vendor/uu_tac" }
uu_basename              = { path = "vendor/uu_basename" }
uu_dirname               = { path = "vendor/uu_dirname" }
uu_seq                   = { path = "vendor/uu_seq" }
uu_expr                  = { path = "vendor/uu_expr" }
uu_tr                    = { path = "vendor/uu_tr" }
uu_cut                   = { path = "vendor/uu_cut" }
uu_uniq                  = { path = "vendor/uu_uniq" }
uu_sort                  = { path = "vendor/uu_sort" }
uu_cp                    = { path = "vendor/uu_cp" }
# Vendored, patched fork of uucore 0.8.0 — the shared uutils library that backs
# every uu_* builtin's localization. The 13 in-process coreutil builtins each
# run on a fresh thread that calls `init_localization("uu_X")`
# (brush-coreutils-builtins → uucore::locale::setup_localization). Stock uucore
# was designed for ONE util per process: its embedded-Fluent-resource caches
# (UUCORE_FLUENT/CHECKSUM_FLUENT/UTIL_FLUENT) are PROCESS-GLOBAL OnceLocks, so
# the first util to run pins UTIL_FLUENT to its own .ftl and every later util on
# any thread gets that first util's bundle — its own translate! keys aren't
# found, so it emits raw Fluent keys (e.g. `tac: tac-error-open-error`). The
# vendored fork makes those caches thread-local so each util's thread builds and
# looks up ITS OWN bundle. Only crates.io uucore 0.8.0 is redirected here; the
# 0.9.0 copy pulled in by vendored findutils is a different version and stays on
# the registry, unaffected (a [patch] only matches the version it provides).
uucore                   = { path = "vendor/uucore" }
