[package]
name = "sarun-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sarun"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
# The depot node model + canonical layer codec (gimir workspace; pure Rust,
# std-only). `crate::depot` is the engine's seam module; the model crate is
# aliased `depot_model` to keep the two distinguishable at use sites.
depot_model = { path = "../gimir/depot", package = "depot" }
# The materialization cache (DEPOT-DESIGN.md §7): real loose files for
# mount-serving an external attachment whose readout hands back Bytes.
depot-cache = { path = "../gimir/depot-cache" }
# The git-mirror store reader (gimir workspace): `git_attach` resolves a
# gitdepot store + ref to a view and imports it as an at-rest RO box.
# Only the chain reader is used in-engine (no `git` binary needed).
gitdepot = { path = "../gimir/gitdepot" }
# Mirror read paths for wiki_attach / ietf_attach PLUS the driver CLIs
# (`fetch`): sarun is a multi-call binary — `sarun wikimak|ietfmak|gitdepot`
# (or an argv[0] symlink) runs the driver. The engine PROCESS still never
# dials out: mirrors.rs re-execs this same binary, so all fetching happens
# in a child process.
ietf_mirror = { path = "../gimir/ietf-mirror", package = "ietf-mirror", default-features = false, features = ["fetch"] }
wikimak_wikipedia = { path = "../gimir/wikimak/wikipedia", package = "wikimak-wikipedia", default-features = false, features = ["fetch", "serve"] }
wikimak_depot = { path = "../gimir/wikimak/depot", package = "wikimak-depot" }
base64 = "0.22.1"
bytes = "1.10"
brush-core = "0.5"
brush-builtins = "0.2"
# clap derive for the in-process exec-wrapper builtins (env/printenv …); the
# `builtins::Command` trait is `clap::Parser`-based. Pinned to the same 4.6.0
# brush-builtins uses so the derived `Parser` impl satisfies brush-core's bound.
clap = { version = "4.6.0", features = ["derive"] }
brush-coreutils-builtins = { version = "0.1", features = ["coreutils.all"] }
# Direct dep on the shared uutils runtime so the engine can install the shell's
# LOGICAL environment for each builtin worker thread
# (`uucore::logical_env::set_logical_env`) before localization + the util body
# run. Redirected to the vendored fork (vendor/uucore) by `[patch.crates-io]`
# below — the same single copy every uu_* builtin + brush-coreutils-builtins use.
uucore = "0.8"
# Direct dep on uutils' `uu_cat` so the engine can call its injected logical
# entry point (`uu_cat::cat`) for the native in-process `cat` builtin. The
# `[patch.crates-io]` below redirects this to our vendored fork (vendor/uu_cat),
# the same copy brush-coreutils-builtins already pulls in transitively.
uu_cat = "0.8"
# More uutils crates ported the same way (vendored fork + injected-I/O logical
# entry) so they run as NATIVE in-process brush builtins — pipeline-safe, no
# dup2. Each is redirected to its vendored fork by `[patch.crates-io]` below.
uu_head = "0.8"
uu_tail = "0.8"
uu_wc = "0.8"
uu_nl = "0.8"
uu_tac = "0.8"
# Wave 2 (same injected-I/O treatment): arg→stdout tinies + filters.
uu_basename = "0.8"
uu_dirname = "0.8"
uu_seq = "0.8"
uu_expr = "0.8"
uu_tr = "0.8"
uu_cut = "0.8"
uu_uniq = "0.8"
uu_sort = "0.8"
# Same injected-I/O treatment, plus a logical-cwd rewrite: `cp` resolves its
# relative path operands against the shell's logical cwd (the process is never
# chdir'd). Logical entry `uu_cp::cp(args, cwd, out, err)`.
uu_cp = "0.8"
# Filesystem ops ported the same way as cp (logical cwd + injected I/O); each has
# a `<name>_main(args, cwd, out, err)` logical entry. Redirected to the vendored
# forks by `[patch.crates-io]` below.
uu_mkdir = "0.8"
uu_rmdir = "0.8"
uu_rm = "0.8"
uu_mv = "0.8"
uu_ln = "0.8"
uu_touch = "0.8"
# Path-resolving + stream coreutils, same logical-cwd + injected-I/O treatment
# as cp. `readlink`/`realpath`/`mktemp` resolve relative operands against the
# shell's logical cwd (process is never chdir'd) and write the logical sinks;
# `tee` additionally reads the logical stdin and writes its file operands.
# Logical entries `uu_readlink::readlink`, `uu_realpath::realpath`,
# `uu_mktemp::mktemp_main`, `uu_tee::tee_main`.
uu_mktemp = "0.8"
uu_readlink = "0.8"
uu_realpath = "0.8"
uu_tee = "0.8"
# Metadata-op file builtins, same logical-cwd + injected-I/O treatment as cp;
# each has a `<name>_main(args, cwd, out, err)` logical entry (`chown` routes
# through the patched `uucore::perms::chown_base_io`).
uu_chmod = "0.8"
uu_chown = "0.8"
uu_install = "0.8"
# Pure stdout info utils (no stdin, no cwd): read read-only system/identity info
# and write the box's logical out/err. Logical entries
# `uu_uname::uname_main` / `uu_nproc::nproc_main` / `uu_id::id_main` /
# `uu_whoami::whoami_main` (all `(args, out, err)`).
uu_uname = "0.8"
uu_nproc = "0.8"
uu_id = "0.8"
uu_whoami = "0.8"
# Vendored, find-only fork of uutils/findutils 0.9.1: run `find` as an
# in-process brush builtin against the shell's logical I/O. See vendor/findutils.
findutils = { path = "vendor/findutils" }
brush-parser = { version = "0.4", features = ["serde"] }
# Reedline-based interactive REPL for the brush-sh shim's -i mode:
# multi-line editing, history, completion, syntax highlight — built on
# the same brush-core we already run, so semantics match script mode.
brush-interactive = { version = "0.4", default-features = false, features = ["reedline"] }
# Line editing + history for the `oci author` REPL at a tty (the same reedline
# brush-interactive already pulls in). Piped/non-tty input still uses plain
# stdin; this is the interactive front-end only.
reedline = "0.47"
crossterm = "0.29"
# Vendored lib-only patched fork of n2 (github.com/evmar/n2) — see vendor/n2.
n2 = { path = "vendor/n2", default-features = false }
# Vendored lib-only patched fork of kati (github.com/google/kati) — see
# vendor/kati. Parses Makefiles → ninja graph for the embedded `make` path.
kati = { path = "vendor/kati" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "fs", "process", "sync"] }
tokio-stream = "0.1"
futures-util = "0.3"
regex = "1"
# Decode image files / captured page images (PNG/JPEG/GIF/WebP) for the sixel
# viewer. Already in the tree transitively (tattoy-termwiz), so this direct dep
# adds no new compilation — just makes `image::` reachable. default-features
# off + the web codecs keeps it lean.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
rustls-pemfile = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
fuser = "0.17.0"
glob = "0.3.3"
libc = "0.2.186"
parking_lot = "0.12"
portable-pty = "0.9"
ratatui = "0.30.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0.150"
similar = "3.1.1"
# wezterm-term's terminal-emulator core (real VT/xterm state machine,
# Sixel/iTerm/Kitty image cells, OSC/DCS coverage). NOT published by
# wezterm itself; the `tattoy-` fork republishes the whole dep chain
# to crates.io specifically for embedding use cases like ours, so we
# can depend on it without vendoring.
tattoy-wezterm-term = "0.1.0-fork.5"
tattoy-termwiz = "0.24.0-fork.2"
# ── Networking (-n boxes): TAP + userland TCP/IP + DHCP + DNS + MITM proxy ─
# Per-box netns with one TAP fd; smoltcp accepts in userland and the engine
# originates the upstream connections from its own (host) namespace. See
# engine/src/net/ for the wiring. dhcproto and domain encode/decode the
# protocol wire formats so this codebase stays in the policy / glue layer.
smoltcp = { version = "0.12", default-features = false, features = [
    "std", "log", "medium-ethernet",
    "socket-tcp", "socket-udp", "socket-raw", "socket-dhcpv4",
    "proto-ipv4", "proto-dhcpv4",
] }
dhcproto = "0.13"
domain = { version = "0.10", features = ["std", "net"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
pcap-file = "2"
nix = { version = "0.30", features = ["sched", "net", "socket", "ioctl", "user", "fs", "process"] }
rand = "0.8"
time = "0.3"
tui-term = { version = "0.3", features = ["vt100"] }
# OCI image import — `sarun oci load` reads a manifest's layers and creates
# a chain of at-rest sarun boxes (one per layer). Public-registry pulls and
# local oci-archive/oci-layout inputs only — no signing, no push.
#   oci-client  registry pull (renamed from oci-distribution; oras-project)
#   oci-spec    typed ImageConfiguration (env/cmd/workdir/user) + layout files
#   tar         per-layer entry iteration (PAX/GNU long-name aware)
#   flate2      gzip layers (tar+gzip media type, the common case)
#   ruzstd      zstd layers (tar+zstd media type) — pure-Rust, no C dep so
#               the static-musl build stays a single binary
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
oci-spec = "0.10"
# `ADD <url>` in `oci build` fetches over HTTPS. reqwest is already in the tree
# (oci-client depends on it). We add no TLS feature ourselves: cargo feature
# unification gives this edge the SAME rustls backend oci-client already enables
# (which builds on static-musl today), so we don't risk pulling a second/C-based
# crypto provider. `http2` is additive and harmless.
reqwest = { version = "0.13", default-features = false, features = ["http2"] }
tar = "0.4"
flate2 = "1"
ruzstd = "0.7"
# ADD-of-local-tar auto-extract for the xz / bzip2 cases. Both are pure-Rust
# (no liblzma / libbz2 C dep), so the static-musl single-binary build is
# unaffected. Decode-only, which is all ADD needs.
lzma-rs = "0.3"
bzip2-rs = "0.1"
# Content-addressable blob integrity for oci-archive/oci-layout loads (verify a
# blob's bytes hash to the digest its descriptor claims). Already in the tree
# transitively via oci-client; named directly so the verification is explicit.
sha2 = "0.10"
# cellulose (the in-engine textmode browser, DESIGN-cellulose.md) counts
# terminal cells per character (wcwidth semantics) when placing DOMSnapshot
# text on the grid. Pure-Rust, static-musl safe; already transitive in the
# tree, promoted to a direct dep.
unicode-width = "0.2"
# `oaita local` unpacks the llama.cpp CPU-runtime release archives (zip).
# deflate-only via the flate2 backend already in the tree — no new C deps,
# static-musl unaffected.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Key-based cosign signature verification (configured public key). Pure-Rust
# RustCrypto ECDSA P-256 + PEM SPKI key parsing — no OpenSSL/C, static-musl safe.
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
# Document reader pane (src/reader.rs): HTML → styled terminal lines with a
# link/heading/fragment index. Markdown goes through pulldown-cmark → HTML →
# the same html2text path so both formats share one renderer. Measured in the
# reader eval: +15 crates, ~+1.3MB on the static-musl binary.
html2text = "0.17"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
# The reader's WIKIPEDIA source renders wikimak store pages in-process — the
# same wikitext→HTML path `wikimak serve` uses (store open_read + AsOfView +
# render + optional Lua). Both crates are ALREADY compiled into the binary via
# wikimak_wikipedia's "serve" feature; naming them directly just makes their
# APIs reachable (no size cost).
wikimak_wikitext = { path = "../gimir/wikimak/wikitext", package = "wikimak-wikitext" }
wikimak_scribunto = { path = "../gimir/wikimak/scribunto", package = "wikimak-scribunto" }
# Structural editing — tree-sitter + a starter pack of grammars. Drives the
# inspect/write "symbol" locators (path symbol <name>[N]): inspect lists or
# focuses named definitions; write splices new content into the symbol's
# byte range. Grammars are C-only, no extra system deps — cc-rs picks up
# the zigshim like onig_sys does.
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
# =0.23.6 matches syntastica-parsers' exact pin, so the editor pane and the
# oaita structural locators link ONE copy of the python grammar (0.25 here
# would co-exist with syntastica's 0.23.6 — two ~500KB grammar objects). The
# 0.23 crate exposes the same `LANGUAGE: LanguageFn` surface structural.rs
# uses, so nothing else changes.
tree-sitter-python = "=0.23.6"
tree-sitter-bash = "0.25"
# ── Editor pane (src/editor.rs): edtui vim-modal widget + syntastica
# (tree-sitter) highlighting. edtui default features OFF: no arboard (X11
# clipboard — a C/dlopen liability for static musl) and NOT its syntect
# highlighter (regex-based, a second highlighting engine); highlighting is
# the syntastica bridge in editor.rs. The parser pack is the 8 languages a
# box plausibly edits; each grammar is exact-pinned by syntastica-parsers
# (rust/bash unify with the locator grammars above). Measured in the editor
# eval: ~+7MB on the static binary.
edtui = { version = "0.11.3", default-features = false }
syntastica = "0.6.1"
syntastica-parsers = { version = "0.6.1", default-features = false, features = [
    "rust", "python", "c", "javascript", "bash", "json", "yaml",
    "markdown", "markdown_inline",
] }
syntastica-themes = "0.6.1"

# sarun: redirect crates.io brush-core 0.5.0 to our vendored copy, which
# pins commit 428f477 (PR #1181) — the fd-leak fix for shell pipelines.
# `brush-core 0.5.0` on crates.io clones `OpenFile` via dup, multiplying
# fd table entries; some of those dups land on numbered fds that survive
# fork+exec despite O_CLOEXEC (notably anything that goes through
# `From<OpenFile> for Stdio`). The visible symptom: long pipelines (e.g.
# autoconf-generated `./configure`) hang because child processes hold the
# write end of their own stdin pipe, so the kernel never delivers EOF.
# PR #1181 reworks OpenFile to wrap File/PipeReader/PipeWriter in Arc, so
# clone is a refcount bump and no dup happens — the fix.
#
# This `[patch.crates-io]` ensures EVERY brush crate (brush-builtins,
# brush-coreutils-builtins, brush-parser, etc.) that names brush-core
# resolves to OUR copy rather than two co-existing brush-core versions
# in the dep graph (which produces "expected (String, Registration<SE>),
# found (String, Registration<_>)" type-mismatch noise across builtin
# registration). Once brush-core 0.6 ships to crates.io, drop this.
[dev-dependencies]
# reader.rs's wiki test builds a tiny wikimak store in-test (the crate's own
# acceptance-test recipe: Instance::open + import(new_page_stream) + flush).
wikimak_mediawiki = { path = "../gimir/wikimak/mediawiki", package = "wikimak-mediawiki", default-features = false }
tempfile = "3"

[patch.crates-io]
brush-core               = { path = "vendor/brush-core" }
brush-builtins           = { path = "vendor/brush-builtins" }
brush-coreutils-builtins = { path = "vendor/brush-coreutils-builtins" }
brush-parser             = { path = "vendor/brush-parser" }
brush-interactive        = { path = "vendor/brush-interactive" }
# Vendored, patched fork of uutils' `uu_cat`: adds a logical, injected-I/O
# entry point (`cat::cat`) that writes the shell's OpenFile sink/source with no
# process-global stdio, so it can run as an in-process brush builtin while
# keeping the Linux splice(2) fast path. The retained `uumain` is a thin bridge
# for the standalone binary / subprocess dispatcher. See vendor/uu_cat/src/cat.rs.
uu_cat                   = { path = "vendor/uu_cat" }
# Same injected-I/O treatment as uu_cat: a logical entry that writes the shell's
# OpenFile sink/source with no process-global stdio, consumed by the native
# Head/Wc/Nl/Tac builtins in src/brush.rs (gated in src/brush_gates.rs).
uu_head                  = { path = "vendor/uu_head" }
uu_tail                  = { path = "vendor/uu_tail" }
uu_wc                    = { path = "vendor/uu_wc" }
uu_nl                    = { path = "vendor/uu_nl" }
uu_tac                   = { path = "vendor/uu_tac" }
uu_basename              = { path = "vendor/uu_basename" }
uu_dirname               = { path = "vendor/uu_dirname" }
uu_seq                   = { path = "vendor/uu_seq" }
uu_expr                  = { path = "vendor/uu_expr" }
uu_tr                    = { path = "vendor/uu_tr" }
uu_cut                   = { path = "vendor/uu_cut" }
uu_uniq                  = { path = "vendor/uu_uniq" }
uu_sort                  = { path = "vendor/uu_sort" }
uu_cp                    = { path = "vendor/uu_cp" }
uu_mkdir                 = { path = "vendor/uu_mkdir" }
uu_rmdir                 = { path = "vendor/uu_rmdir" }
uu_rm                    = { path = "vendor/uu_rm" }
uu_mv                    = { path = "vendor/uu_mv" }
uu_ln                    = { path = "vendor/uu_ln" }
uu_touch                 = { path = "vendor/uu_touch" }
uu_mktemp                = { path = "vendor/uu_mktemp" }
uu_readlink              = { path = "vendor/uu_readlink" }
uu_realpath              = { path = "vendor/uu_realpath" }
uu_tee                   = { path = "vendor/uu_tee" }
uu_chmod                 = { path = "vendor/uu_chmod" }
uu_chown                 = { path = "vendor/uu_chown" }
uu_install               = { path = "vendor/uu_install" }
uu_uname                 = { path = "vendor/uu_uname" }
uu_nproc                 = { path = "vendor/uu_nproc" }
uu_id                    = { path = "vendor/uu_id" }
uu_whoami                = { path = "vendor/uu_whoami" }
# Vendored, patched fork of uucore 0.8.0 — the shared uutils library that backs
# every uu_* builtin's localization. The 13 in-process coreutil builtins each
# run on a fresh thread that calls `init_localization("uu_X")`
# (brush-coreutils-builtins → uucore::locale::setup_localization). Stock uucore
# was designed for ONE util per process: its embedded-Fluent-resource caches
# (UUCORE_FLUENT/CHECKSUM_FLUENT/UTIL_FLUENT) are PROCESS-GLOBAL OnceLocks, so
# the first util to run pins UTIL_FLUENT to its own .ftl and every later util on
# any thread gets that first util's bundle — its own translate! keys aren't
# found, so it emits raw Fluent keys (e.g. `tac: tac-error-open-error`). The
# vendored fork makes those caches thread-local so each util's thread builds and
# looks up ITS OWN bundle. Only crates.io uucore 0.8.0 is redirected here; the
# 0.9.0 copy pulled in by vendored findutils is a different version and stays on
# the registry, unaffected (a [patch] only matches the version it provides).
uucore                   = { path = "vendor/uucore" }

# Release binary keeps line-table debug info (strip=false, debug=1) so a
# wedged box is DEBUGGABLE — gdb/addr2line resolve real file:line frames
# instead of `?? ()`. This is the enabling half of the `stuck` wedge
# diagnosis: wchan + fd topology (from /proc, always available) plus a
# symbolized backtrace when you attach. line-tables-only keeps the size
# growth modest and does NOT affect the fully-static musl linkage
# (prototype/test_musl_rs.py still passes). Not `debug=2` — locals aren't
# worth the bloat for a first cut.
[profile.release]
strip = false
debug = "line-tables-only"
