[package]
name = "depot-vbf"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
depot = { path = "../depot" }
wikimak-depot.workspace = true
zstd = { workspace = true, features = ["experimental"] }

[dev-dependencies]
depot-stream = { path = "../depot-stream" }
tempfile = "3"
