[package]
name = "gitdepot"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
depot = { path = "../depot" }
zstd = { workspace = true, features = ["experimental"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
