[package]
name = "gitdepot"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
depot = { path = "../depot" }
zstd = { workspace = true, features = ["experimental"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
# Git object ids recomputed host-side (stub rebuild asserts sha
# equality without a round-trip through git).
sha1 = { workspace = true }
sha2 = { workspace = true }
libc = { workspace = true }
# Native git object reads (gitobj.rs): zlib inflate for loose objects and
# pack entries — pure-Rust backend, musl-safe.
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
rusqlite = { workspace = true }
wikimak-depot = { workspace = true }

[dev-dependencies]
tempfile = "3"
# Tests inspect meta.sqlite row keys directly (the O(new)-update proof).
rusqlite = { workspace = true }
