[package]
name = "ietf-mirror"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
depot = { path = "../depot" }
depot-vbf = { path = "../depot-vbf" }
rusqlite.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"

[[bin]]
name = "ietfmak"
path = "src/bin/ietfmak.rs"
